[gd_scene load_steps=2 format=3 uid="uid://tu0e2qfw5wor"]

[ext_resource type="Script" path="res://scripts/ui_modules/match_manager.gd" id="1_0ulko"]

[node name="MatchManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ulko")
networking_menu_path = "res://scenes/ui_modules/networking_menu.tscn"
logger_path = NodePath("CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Logger")
match_name_path = NodePath("CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/PanelContainer/MatchName")
matches_ui_path = NodePath("CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Matches")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Match Name"

[node name="MatchName" type="LineEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_type_variation = &"FormInput"
text = "test"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CreateBridge" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Connect to Server"

[node name="CreateMatch" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Create Match"

[node name="JoinMatch" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join Match"

[node name="GoToNetworkMenu" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Network Menu"

[node name="Matches" type="Tree" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Logger" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_type_variation = &"Logging"
text = "waiting on player input"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CreateBridge" to="." method="_on_create_bridge_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CreateMatch" to="." method="_on_create_match_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/JoinMatch" to="." method="_on_join_match_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GoToNetworkMenu" to="." method="_on_go_to_network_menu_pressed"]
